resources/style.css
/********************
*   General Style   *
********************/

:root {
    color-scheme: light dark;
    --theme-primary-color: hsl(225, 100%, 50%);
    --theme-secondary-color: hsl(225, 100%, 30%);
    --theme-accent-color: hsl(45, 100%, 50%);
    --theme-info-color: hsl(225, 100%, 50%);
    --theme-success-color: hsl(112.5, 100%, 35%);
    --theme-warning-color: hsl(45, 100%, 50%);
    --theme-error-color: hsl(0, 100%, 50%);
    --theme-primary-grey-color: light-dark(hsl(0, 0%, 85%), hsl(0, 0%, 15%));
    --theme-secondary-grey-color: light-dark(hsl(0, 0%, 70%), hsl(0, 0%, 30%));
    --theme-background-color: light-dark(white, black);
    --theme-text-color: light-dark(black, white);
    --theme-text-grey-color: light-dark(hsl(0, 0%, 40%), hsl(0, 0%, 60%));
    --theme-font-family: Roboto, sans-serif;
    --theme-border-radius: 5px;
    --theme-border-width: 3px;
    --theme-box-shadow: none;
    --theme-element-spacing: 30px;
    --theme-inner-element-spacing: 20px;
    --theme-menu-height: calc(1em + 2 * round(0.2em, 2px) + 2 * round(0.5em, 2px));
    --theme-navigation-width: 250px;
    background-color: var(--theme-background-color);
    color: var(--theme-text-color);
    font-family: var(--theme-font-family);
    font-size: 18px;
    font-weight: 500;
    line-height: round(1.7em, 1px);
    letter-spacing: 0.01em;
    scroll-behavior: smooth;
}

::selection {
    background: hsl(225, 100%, 50%);
    color: white;
}

body {
    padding: 0;
    margin: 0;
    background-repeat: no-repeat;
}

@media only screen and (max-width: 575px) { :root { font-size: 15px }}

/************************************************
*   Fonts                                       *
*   Roboto by Google unter Apache 2.0 license   *
************************************************/

@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(fonts/Roboto-Regular.ttf) format('truetype');
}

@font-face {
    font-family: 'Roboto';
    font-style: italic;
    font-weight: 400;
    font-display: swap;
    src: url(fonts/Roboto-Italic.ttf) format('truetype');
}

@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: bold;
    font-display: swap;
    src: url(fonts/Roboto-Bold.ttf) format('truetype');
}

@font-face {
    font-family: 'Roboto';
    font-style: italic;
    font-weight: bold;
    font-display: swap;
    src: url(fonts/Roboto-BoldItalic.ttf) format('truetype');
}

@font-face {
    font-family: 'Roboto Mono';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(fonts/RobotoMono-VariableFont_wght.ttf) format('truetype');
}

@font-face {
    font-family: 'Roboto Mono';
    font-style: italic;
    font-weight: 400;
    font-display: swap;
    src: url(fonts/RobotoMono-Italic-VariableFont_wght.ttf) format('truetype');
}

/************
*   Icons   *
************/

swd-icon.hamburger { mask-image: url('data:image/svg+xml,<svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M0 1 H18 M0 9 H 18 M0 17 H18" stroke-width="2" stroke="black"/></svg>') }
swd-icon.more { mask-image: url('data:image/svg+xml,<svg width="16" height="16" xmlns="http://www.w3.org/2000/svg"><circle r="1.5" cx="8" cy="1.5"/><circle r="1.5" cx="8" cy="8"/><circle r="1.5" cx="8" cy="14.5"/></svg>') }
swd-icon.arrow-left { mask-image: url('data:image/svg+xml,<svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M9.5 1 L1.5 9 L9.5 17 M2 9 H18" stroke-width="2" stroke="black" fill="none"/></svg>') }
swd-icon.arrow-right { mask-image: url('data:image/svg+xml,<svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M8.5 1 L16.5 9 L8.5 17 M0 9 H16" stroke-width="2" stroke="black" fill="none"/></svg>') }
swd-icon.arrow-up { mask-image: url('data:image/svg+xml,<svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M1 9.5 L9 1.5 L17 9.5 M9 2 V18" stroke-width="2" stroke="black" fill="none"/></svg>') }
swd-icon.arrow-down { mask-image: url('data:image/svg+xml,<svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M1 8.5 L9 16.5 L17 8.5 M9 0 V16" stroke-width="2" stroke="black" fill="none"/></svg>') }
swd-icon.left { mask-image: url('data:image/svg+xml,<svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M13 1 5 9 L13 17" stroke-width="2" stroke="black" fill="none"/></svg>') }
swd-icon.right { mask-image: url('data:image/svg+xml,<svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M5 1 13 9 L5 17" stroke-width="2" stroke="black" fill="none"/></svg>') }
swd-icon.up { mask-image: url('data:image/svg+xml,<svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M1 13 L9 5 L17 13" stroke-width="2" stroke="black" fill="none"/></svg>') }
swd-icon.down { mask-image: url('data:image/svg+xml,<svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M1 5 L9 13 L17 5" stroke-width="2" stroke="black" fill="none"/></svg>') }
swd-icon.download { mask-image: url('data:image/svg+xml,<svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M3 6.5 L9 12.5 L15 6.5 M9 0 V13 M0 17 H18" stroke-width="2" stroke="black" fill="none"/></svg>') }
swd-icon.upload { mask-image: url('data:image/svg+xml,<svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M3 11.5 L9 5.5 L15 11.5 M9 5 V18 M0 1 H18" stroke-width="2" stroke="black" fill="none"/></svg>') }
swd-icon.external { mask-image: url('data:image/svg+xml,<svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M17 12 V17 H1 V1 H6 M10 1 H17 V8 M17 1 L7 11" stroke-width="2" stroke="black" fill="none"/></svg>') }
/* ... */

